<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutText">

        <Button
            android:id="@+id/day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            android:textColor="#95FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            android:textColor="#C1FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day4"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:layout_weight="0.1"
            android:background="@drawable/round_button"
            android:text="X"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            android:textColor="#C1FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

        <Button
            android:id="@+id/day7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="X"
            android:textColor="#95FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayDisplay" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleTitle">

        <TextView
            android:id="@+id/dayDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#272A2B"
            android:gravity="center"
            android:text="Day"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/todayDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#272A2B"
            android:gravity="center"
            android:text="Date"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weekDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#272A2B"
            android:gravity="center"
            android:text="Week"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/scheduleDay"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="0"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="403dp" />

    <TextView
        android:id="@+id/scheduleTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/schedule"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:tag="down"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/clock_icon" />

    <TextView
        android:id="@+id/loadingClasses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading_schedule"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noInternetMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:gravity="center"
        android:text="@string/noInternet"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/loadUserSchedule"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/search_loop"
        app:layout_constraintBottom_toBottomOf="@+id/scheduleTitle"
        app:layout_constraintEnd_toEndOf="@+id/scheduleTitle"
        app:layout_constraintTop_toTopOf="@+id/scheduleTitle" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scheduleTitle"
        app:layout_constraintStart_toStartOf="@+id/scheduleTitle"
        app:layout_constraintTop_toTopOf="@+id/scheduleTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        android:src="@drawable/refresh"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutText"
        app:layout_constraintEnd_toStartOf="@+id/loadUserSchedule"
        app:layout_constraintTop_toTopOf="@+id/scheduleTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchForUser"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:background="#2D2F30"
        android:tag="up"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="invisible"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/allUsers"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="125dp"
            android:cacheColorHint="#FFFFFF"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            android:visibility="invisible"
            tools:visibility="invisible">

        </ListView>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="90dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FF004E"
            android:gravity="center"
            android:text="@string/searchSchedule"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="12.5dp"
            android:background="@drawable/round_menu"
            android:text="@string/search" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="58dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:tag="1"
            android:text="Afkorting of nummer"
            android:textSize="18dp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/schoolYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginLeft="216dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" />

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/classesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/loadingClasses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

